--- a/Programs.html
+++ b/Programs.html
@@ -148,11 +148,11 @@
 
     <nav>
         <img src="Symbol.png" class="image" alt="Symbol">
-        <a href="file:///D:/Jacob%20HW/Index.html">Home</a>
-        <a href="file:///D:/Jacob%20HW/About.html">About</a>
-        <a href="file:///D:/Jacob%20HW/Programs.html">Programs</a>
-        <a href="file:///D:/Jacob%20HW/Contacts.html">Contact</a>
-        <a href="file:///D:/Jacob%20HW/Get%20Involved.html">Get Involved</a>
+        <a href="file:///X:/Index.html">Home</a>
+        <a href="file:///X:/About.html">About</a>
+        <a href="file:///X:/Programs.html">Programs</a>
+        <a href="file:///X:/Contact.html">Contact</a>
+        <a href="file:///X:/Donations.html">Get Involved</a>
     </nav>
     
     <header>
