--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
 <body>
 
   <nav>
-       <img src="Symbol.png" class="image" alt="Symbol">
-        <a href="file:///D:/Jacob%20HW/Index.html">Home</a>
-        <a href="file:///D:/Jacob%20HW/About.html">About</a>
-        <a href="file:///D:/Jacob%20HW/Programs.html">Programs</a>
-        <a href="file:///D:/Jacob%20HW/Contacts.html">Contact</a>
-        <a href="file:///D:/Jacob%20HW/Get%20Involved.html">Get Involved</a>
+      <img src="Symbol.png" class="image" alt="Symbol">
+        <a href="file:///X:/Index.html">Home</a>
+        <a href="file:///X:/About.html">About</a>
+        <a href="file:///X:/Programs.html">Programs</a>
+        <a href="file:///X:/Contact.html">Contact</a>
+        <a href="file:///X:/Donations.html">Get Involved</a>
     </nav>
 	
 	 <div class="container">
